--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1139,9 +1139,8 @@ input, select, textarea {
 			-webkit-transition-delay: 0.75s;
 			-ms-transition-delay: 0.75s;
 			transition-delay: 0.75s;
-			background-image: linear-gradient(to top, rgba(19, 21, 25, 0.5), rgba(19, 21, 25, 0.5)), url("../../images/NGC1316.jpg");
-			background-size: cover,
- 256px 256px;
+			background-image: linear-gradient(to top, rgba(19, 21, 25, 0.5), rgba(19, 21, 25, 0.5)), url("../../images/Andromeda.png");
+			background-size: cover, 100% 100%;
 			background-position: center,
  center;
 			background-repeat: no-repeat,
@@ -1160,7 +1159,7 @@ input, select, textarea {
 			transition: transform 0.325s ease-in-out, filter 0.325s ease-in-out;
 			background-image: url("../../images/bg.jpg");
 			background-position: center;
-			background-size: 100% 100%;
+			background-size: auto;
 			background-repeat: no-repeat;
 			z-index: 1;
 		}
